--- a/common/scss/_base.scss
+++ b/common/scss/_base.scss
@@ -1,6 +1,6 @@
 body{
   color: #555;
-  font-family: "Hiragino Kaku Gothic Pro",'Open Sans','Noto Sans JP',"ＭＳ Ｐゴシック","MS PGothic","メイリオ",Verdana,Arial,sans-serif;
+  font-family: 'Open Sans',"Hiragino Kaku Gothic Pro",'Open Sans','Noto Sans JP',"ＭＳ Ｐゴシック","MS PGothic","メイリオ",Verdana,Arial,sans-serif;
   font-size: 14px;
   font-weight: normal;
   margin: 0;
@@ -21,7 +21,7 @@ img{
   max-width: 100%;
 }
 
-h2{
+h3{
   font-family: 'Open Sans',sans-serif;
   font-size: 18px;
   letter-spacing: 4px;
