--- a/common/css/style.css
+++ b/common/css/style.css
@@ -57,7 +57,7 @@ table {
 
 body {
   color: #555;
-  font-family: "Hiragino Kaku Gothic Pro",'Open Sans','Noto Sans JP',"ＭＳ Ｐゴシック","MS PGothic","メイリオ",Verdana,Arial,sans-serif;
+  font-family: 'Open Sans',"Hiragino Kaku Gothic Pro",'Open Sans','Noto Sans JP',"ＭＳ Ｐゴシック","MS PGothic","メイリオ",Verdana,Arial,sans-serif;
   font-size: 14px;
   font-weight: normal;
   margin: 0;
@@ -81,7 +81,7 @@ img {
   max-width: 100%;
 }
 
-h2 {
+h3 {
   font-family: 'Open Sans',sans-serif;
   font-size: 18px;
   letter-spacing: 4px;
@@ -89,7 +89,7 @@ h2 {
   position: relative;
 }
 
-h2:before {
+h3:before {
   content: '';
   width: 20px;
   height: 1px;
@@ -101,7 +101,7 @@ h2:before {
   left: 0;
 }
 
-.c-container {
+.l-container {
   max-width: 1100px;
   width: 94%;
   margin: 0 auto;
@@ -117,4 +117,10 @@ h2:before {
   .u-sp {
     display: none;
   }
+}
+
+.u-flex {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
 }
