--- a/common/css/style.css
+++ b/common/css/style.css
@@ -56,7 +56,7 @@ table {
 }
 
 body {
-  color: #555;
+  color: #333;
   font-family: 'Open Sans',"Hiragino Kaku Gothic Pro",'Open Sans','Noto Sans JP',"ＭＳ Ｐゴシック","MS PGothic","メイリオ",Verdana,Arial,sans-serif;
   font-size: 14px;
   font-weight: normal;
@@ -66,7 +66,7 @@ body {
 }
 
 a {
-  color: #555;
+  color: #333;
   text-decoration: none;
   -webkit-transition: 0.3s ease-in-out all;
   -o-transition: 0.3s ease-in-out all;
@@ -101,8 +101,28 @@ h3:before {
   left: 0;
 }
 
+.l-header {
+  width: 94%;
+  margin: auto;
+}
+
+.p-headercontents {
+  font-size: 16px;
+  padding: 32px 0 24px;
+}
+
+.p-headercontents.u-flex {
+  -webkit-box-pack: justify;
+  -ms-flex-pack: justify;
+  justify-content: space-between;
+}
+
+.p-headercontents li {
+  padding: 0 24px;
+}
+
 .l-container {
-  max-width: 1100px;
+  max-width: 1200px;
   width: 94%;
   margin: 0 auto;
 }
@@ -119,8 +139,39 @@ h3:before {
   }
 }
 
+.u-center {
+  text-align: center;
+}
+
 .u-flex {
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
+}
+
+.p-footercontents {
+  font-size: 16px;
+  border-top: 1px solid #999;
+}
+
+.p-footercontents__copyright {
+  font-size: 14px;
+}
+
+.p-footercontents a {
+  display: block;
+}
+
+.p-footercontents li {
+  padding: 0 24px;
+}
+
+.p-footercontents .c-contents {
+  padding: 32px 0 24px;
+}
+
+.p-footercontents .c-contents.u-flex {
+  -webkit-box-pack: justify;
+  -ms-flex-pack: justify;
+  justify-content: space-between;
 }
