--- a/common/scss/_l-footer.scss
+++ b/common/scss/_l-footer.scss
@@ -1,3 +1,20 @@
-.footer{
 
+.p-footercontents{
+  font-size: 16px;
+  border-top: 1px solid #999;
+  &__copyright{
+    font-size: 14px;
+  }
+  a{
+    display: block;
+  }
+  li{
+    padding: 0 24px;
+  }
+  .c-contents{
+    padding: 32px 0 24px;
+    &.u-flex{
+      justify-content: space-between;
+    }
+  }
 }
