--- a/common/scss/_l-main.scss
+++ b/common/scss/_l-main.scss
@@ -1,5 +1,5 @@
 .l-container{
-  max-width: 1100px;
+  max-width: 1200px;
   width: 94%;
   margin: 0 auto;
 }
@@ -14,6 +14,10 @@
   @media screen and (min-width: 768px){
     display: none;
   }
+}
+
+.u-center{
+  text-align: center;
 }
 
 .u-flex{
