--- a/common/scss/_l-footer.scss
+++ b/common/scss/_l-footer.scss
@@ -2,6 +2,11 @@
 .p-footercontents{
   font-size: 16px;
   border-top: 1px solid #999;
+  &__logo{
+    img{
+      width: 75px;
+    }
+  }
   &__copyright{
     font-size: 14px;
   }
