--- a/common/css/style.css
+++ b/common/css/style.css
@@ -153,6 +153,10 @@ h3:before {
   display: flex;
 }
 
+.l-footer {
+  background: #fbf9f8;
+}
+
 .p-footercontents {
   font-size: 16px;
   border-top: 1px solid #999;
@@ -164,6 +168,7 @@ h3:before {
 
 .p-footercontents__copyright {
   font-size: 14px;
+  padding-bottom: 16px;
 }
 
 .p-footercontents a {
