--- a/common/scss/_l-footer.scss
+++ b/common/scss/_l-footer.scss
@@ -1,3 +1,6 @@
+.l-footer{
+  background: #fbf9f8;
+}
 
 .p-footercontents{
   font-size: 16px;
@@ -9,6 +12,7 @@
   }
   &__copyright{
     font-size: 14px;
+    padding-bottom: 16px;
   }
   a{
     display: block;
