--- a/css/style.css
+++ b/css/style.css
@@ -1,11 +1,64 @@
+.p-visual {
+  height: 38.5vw;
+  width: 96%;
+  margin: auto;
+  background: url(../images/pic_index01.jpg) no-repeat center center;
+  background-size: 100% auto;
+}
+
+.p-newpost {
+  background: #f7edea;
+}
+
 .p-newpost h2 img {
   width: 390px;
 }
 
-.p-photo {
+.p-journal .u-flex {
+  -webkit-box-pack: justify;
+  -ms-flex-pack: justify;
+  justify-content: space-between;
+}
+
+.c-post {
+  width: 30%;
   position: relative;
 }
 
-.p-photo__main {
+.c-post__img {
+  width: 100%;
+  display: block;
+}
+
+.c-post__img img {
+  width: 100%;
+}
+
+.c-post__date {
   position: absolute;
+  top: -10px;
+  right: -8px;
+  height: 14px;
+  display: inline-block;
+  -webkit-transform-origin: bottom right;
+  -ms-transform-origin: bottom right;
+  transform-origin: bottom right;
+  -webkit-transform: rotate(90deg) translate(100%, 0);
+  -ms-transform: rotate(90deg) translate(100%, 0);
+  transform: rotate(90deg) translate(100%, 0);
+}
+
+.p-photo__main {
+  width: 810px;
+  margin: 0 0 0 auto;
+}
+
+.c-photo {
+  width: 60%;
+  padding: 56px 0;
+  background: #f7edea;
+}
+
+.p-about {
+  background: #fbf9f8;
 }
