--- a/common/scss/_base.scss
+++ b/common/scss/_base.scss
@@ -1,6 +1,6 @@
 body{
   color: #333;
-  font-family: 'Open Sans',"Hiragino Kaku Gothic Pro",'Open Sans','Noto Sans JP',"ＭＳ Ｐゴシック","MS PGothic","メイリオ",Verdana,Arial,sans-serif;
+  font-family: 'Noto Sans JP',"Hiragino Kaku Gothic Pro",'Open Sans','Noto Sans JP',"ＭＳ Ｐゴシック","MS PGothic","メイリオ",Verdana,Arial,sans-serif;
   font-size: 14px;
   font-weight: normal;
   margin: 0;
