--- a/common/scss/_l-main.scss
+++ b/common/scss/_l-main.scss
@@ -23,3 +23,11 @@
 .u-flex{
   display: flex;
 }
+
+.u-opensans{
+  font-family: 'Open Sans', sans-serif;
+}
+
+.c-btn{
+  font-family: 'Open Sans', sans-serif;
+}
