--- a/common/css/style.css
+++ b/common/css/style.css
@@ -56,7 +56,7 @@ table {
 }
 
 body {
-  color: #333;
+  color: #555;
   font-family: 'Noto Sans JP',"Hiragino Kaku Gothic Pro",'Open Sans','Noto Sans JP',"ＭＳ Ｐゴシック","MS PGothic","メイリオ",Verdana,Arial,sans-serif;
   font-size: 14px;
   font-weight: normal;
@@ -66,7 +66,7 @@ body {
 }
 
 a {
-  color: #333;
+  color: #555;
   text-decoration: none;
   -webkit-transition: 0.3s ease-in-out all;
   -o-transition: 0.3s ease-in-out all;
@@ -85,20 +85,21 @@ h3 {
   font-family: 'Open Sans',sans-serif;
   font-size: 18px;
   letter-spacing: 4px;
-  padding-left: 30px;
+  padding-right: 110px;
   position: relative;
+  display: inline-block;
 }
 
 h3:before {
   content: '';
-  width: 20px;
+  width: 100px;
   height: 1px;
   margin: auto;
-  background: #222;
+  background: #555;
   position: absolute;
   top: 0;
   bottom: 0;
-  left: 0;
+  right: 0;
 }
 
 .l-header {
