--- a/scss/_newpost.scss
+++ b/scss/_newpost.scss
@@ -15,3 +15,21 @@
     position: relative;
   }
 }
+
+.c-new{
+  &__date{
+    font-size: 16px;
+    display: block;
+  }
+  &__title{
+    font-size: 20px;
+    display: block;
+  }
+  &__category{
+    a{
+      font-size: 16px;
+      color: #e57777;
+      text-decoration: underline;
+    }
+  }
+}
