--- a/common/css/style.css
+++ b/common/css/style.css
@@ -159,8 +159,48 @@ h3:before {
   font-family: 'Open Sans', sans-serif;
 }
 
-.c-btn {
+.c-btn a {
   font-family: 'Open Sans', sans-serif;
+  font-size: 14px;
+  letter-spacing: 2px;
+  width: 200px;
+  padding: 30px 0 30px 8px;
+  position: relative;
+  display: block;
+  overflow: hidden;
+}
+
+.c-btn a:before {
+  content: '';
+  width: 100%;
+  height: 1px;
+  background: #aaa;
+  position: absolute;
+  left: 0;
+  bottom: 0;
+}
+
+.c-btn a:after {
+  content: '';
+  width: 200px;
+  height: 1px;
+  background: #e57777;
+  position: absolute;
+  left: -201px;
+  bottom: 0;
+  -webkit-transition: ease-in-out 0.3s;
+  -o-transition: ease-in-out 0.3s;
+  transition: ease-in-out 0.3s;
+}
+
+.c-btn a:hover:after {
+  content: '';
+  width: 100%;
+  height: 1px;
+  background: #e57777;
+  position: absolute;
+  left: 0;
+  bottom: 0;
 }
 
 .l-footer {
