--- a/common/scss/_l-main.scss
+++ b/common/scss/_l-main.scss
@@ -29,5 +29,44 @@
 }
 
 .c-btn{
-  font-family: 'Open Sans', sans-serif;
+  a{
+    font-family: 'Open Sans', sans-serif;
+    font-size: 14px;
+    letter-spacing: 2px;
+    width: 200px;
+    padding: 30px 0 30px 8px;
+    position: relative;
+    display: block;
+    overflow: hidden;
+    &:before{
+      content: '';
+      width: 100%;
+      height: 1px;
+      background: #aaa;
+      position: absolute;
+      left: 0;
+      bottom: 0;
+    }
+    &:after{
+      content: '';
+      width: 200px;
+      height: 1px;
+      background: #e57777;
+      position: absolute;
+      left: -201px;
+      bottom: 0;
+      transition: ease-in-out 0.3s;
+    }
+    &:hover{
+      &:after{
+        content: '';
+        width: 100%;
+        height: 1px;
+        background: #e57777;
+        position: absolute;
+        left: 0;
+        bottom: 0;
+      }
+    }
+  }
 }
