--- a/common/scss/_l-main.scss
+++ b/common/scss/_l-main.scss
@@ -51,7 +51,7 @@
       content: '';
       width: 200px;
       height: 1px;
-      background: #e57777;
+      background: #ef9c9c;
       position: absolute;
       left: -201px;
       bottom: 0;
@@ -62,7 +62,7 @@
         content: '';
         width: 100%;
         height: 1px;
-        background: #e57777;
+        background: #ef9c9c;
         position: absolute;
         left: 0;
         bottom: 0;
