--- a/common/css/style.css
+++ b/common/css/style.css
@@ -184,7 +184,7 @@ h3:before {
   content: '';
   width: 200px;
   height: 1px;
-  background: #e57777;
+  background: #ef9c9c;
   position: absolute;
   left: -201px;
   bottom: 0;
@@ -197,7 +197,7 @@ h3:before {
   content: '';
   width: 100%;
   height: 1px;
-  background: #e57777;
+  background: #ef9c9c;
   position: absolute;
   left: 0;
   bottom: 0;
