--- a/css/style.css
+++ b/css/style.css
@@ -25,23 +25,42 @@
 }
 
 .p-newpost .l-container {
+  max-width: 1100px;
+  width: 90%;
   position: relative;
+}
+
+.c-new__text {
+  margin: 140px 0 0 80px;
+}
+
+.c-new__textcontents {
+  margin-bottom: 40px;
 }
 
 .c-new__date {
   font-size: 14px;
+  margin-bottom: 12px;
   display: block;
 }
 
 .c-new__title {
-  font-size: 22px;
+  font-size: 20px;
   display: block;
+}
+
+.c-new__category {
+  margin-top: 12px;
 }
 
 .c-new__category a {
   font-size: 14px;
-  color: #e57777;
+  color: #ef9c9c;
   text-decoration: underline;
+}
+
+.c-new__category a:hover {
+  color: #e57777;
 }
 
 .p-journal {
@@ -102,21 +121,44 @@
 }
 
 .c-post__category a {
-  color: #e57777;
+  color: #ef9c9c;
   font-size: 12px;
   text-decoration: underline;
 }
 
+.c-post__category a:hover {
+  color: #e57777;
+}
+
+.p-photo {
+  margin-bottom: 60px;
+  position: relative;
+}
+
 .p-photo__main {
-  width: 810px;
-  margin: 0 0 0 auto;
+  position: absolute;
+  top: 70px;
+  right: 0;
 }
 
 .c-photocontents {
-  padding: 56px 0;
-  background: #f7edea;
+  padding: 130px 0;
+  background: -webkit-gradient(linear, left top, right top, from(#f7edea), color-stop(60%, #f7edea), color-stop(60%, #fff), to(#fff));
+  background: -webkit-linear-gradient(left, #f7edea 0%, #f7edea 60%, #fff 60%, #fff 100%);
+  background: -o-linear-gradient(left, #f7edea 0%, #f7edea 60%, #fff 60%, #fff 100%);
+  background: linear-gradient(90deg, #f7edea 0%, #f7edea 60%, #fff 60%, #fff 100%);
+}
+
+.c-photocontents__textbox {
+  padding-left: 50px;
+}
+
+.c-photocontents__text {
+  margin: 40px 0 60px;
 }
 
 .p-about {
+  margin-top: -60px;
+  padding: 140px 0 60px;
   background: #fbf9f8;
 }
