--- a/common/css/style.css
+++ b/common/css/style.css
@@ -117,6 +117,12 @@ h3:before {
   padding: 32px 0 24px;
 }
 
+@media screen and (max-width: 900px) {
+  .p-headercontents {
+    font-size: 14px;
+  }
+}
+
 .p-headercontents.u-flex {
   -webkit-box-pack: justify;
   -ms-flex-pack: justify;
@@ -125,6 +131,10 @@ h3:before {
 
 .p-headercontents li {
   padding: 0 24px;
+}
+
+.p-headercontents li a {
+  display: block;
 }
 
 .l-container {
