--- a/common/scss/_l-header.scss
+++ b/common/scss/_l-header.scss
@@ -13,10 +13,16 @@
 .p-headercontents{
   font-size: 16px;
   padding: 32px 0 24px;
+  @media screen and (max-width: 900px){
+    font-size: 14px;
+  }
   &.u-flex{
     justify-content: space-between;
   }
   li{
     padding: 0 24px;
+    a{
+      display: block;
+    }
   }
 }
