--- a/scss/_photo.scss
+++ b/scss/_photo.scss
@@ -6,16 +6,42 @@
     position: absolute;
     top: 70px;
     right: 0;
+    @media screen and (max-width: 1150px){
+      width: 65%;
+    }
+    @media screen and (max-width: 900px){
+      width: 60%;
+    }
+    @media screen and (max-width: 800px){
+      width: 90%;
+      margin: -40px 0 0 auto;
+      position: static;
+    }
   }
 }
 
 .c-photocontents{
   padding: 130px 0;
   background: linear-gradient(90deg,#f7edea 0%,#f7edea 60%, #fff 60%,#fff 100%);
+  @media screen and (max-width: 1150px){
+    padding: 110px 0;
+  }
+  @media screen and (max-width: 1000px){
+    padding: 90px 0;
+  }
+  @media screen and (max-width: 900px){
+    padding: 80px 0;
+  }
+  @media screen and (max-width: 800px){
+    background: linear-gradient(90deg,#f7edea 0%,#f7edea 90%, #fff 90%,#fff 100%);
+  }
   &__textbox{
     padding-left: 50px;
   }
   &__text{
     margin: 40px 0 60px;
+    @media screen and (max-width: 900px){
+      margin: 20px 0 40px;
+    }
   }
 }
