--- a/scss/_post.scss
+++ b/scss/_post.scss
@@ -3,6 +3,9 @@
   padding: 80px 0;
   ul{
     margin: 40px 0;
+    @media screen and (max-width: 1000px){
+      margin: 40px 0 20px;
+    }
   }
   .u-flex{
     justify-content: space-between;
@@ -19,6 +22,9 @@
   position: relative;
   h4{
     font-size: 16px;
+    @media screen and (max-width: 900px){
+      font-size: 14px;
+    }
   }
   &__img{
     width: 100%;
