--- a/scss/_newpost.scss
+++ b/scss/_newpost.scss
@@ -7,6 +7,9 @@
     margin-top: 20px;
     background: linear-gradient(180deg, #fff 0%,#fff 140px, #f7edea 140px,#f7edea 100%);
   }
+  @media screen and (max-width: 767px){
+    padding: 60px 0;
+  }
   h2{
     position: absolute;
     left: -40px;
@@ -14,10 +17,16 @@
     @media screen and (max-width: 1000px){
       left: -30px;
     }
+    @media screen and (max-width: 640px){
+      left: -10px;
+    }
     img{
       width: 390px;
       @media screen and (max-width: 1000px){
         width: 300px;
+      }
+      @media screen and (max-width: 640px){
+        width: 250px;
       }
     }
   }
@@ -25,6 +34,11 @@
     max-width: 1100px;
     width: 90%;
     position: relative;
+  }
+  .u-flex{
+    @media screen and (max-width: 640px){
+      display: block;
+    }
   }
 }
 
@@ -37,6 +51,9 @@
     @media screen and (max-width: 1000px){
       margin: 100px 0 0 40px;
     }
+    @media screen and (max-width: 640px){
+      margin: 40px 0 0 0;
+    }
   }
   &__img{
     @media screen and (max-width: 1000px){
@@ -44,6 +61,12 @@
     }
     @media screen and (max-width: 900px){
       width: 400px;
+    }
+    @media screen and (max-width: 800px){
+      width: 350px;
+    }
+    @media screen and (max-width: 640px){
+      width: 100%;
     }
   }
   &__textcontents{
