--- a/scss/_photo.scss
+++ b/scss/_photo.scss
@@ -33,10 +33,13 @@
     padding: 80px 0;
   }
   @media screen and (max-width: 800px){
-    background: linear-gradient(90deg,#f7edea 0%,#f7edea 90%, #fff 90%,#fff 100%);
+    background: #f7edea;
   }
   &__textbox{
     padding-left: 50px;
+    @media screen and (max-width: 1000px){
+      padding-left: 30px;
+    }
   }
   &__text{
     margin: 40px 0 60px;
