--- a/scss/_post.scss
+++ b/scss/_post.scss
@@ -1,6 +1,9 @@
 
 .p-journal{
   padding: 80px 0;
+  @media screen and (max-width: 767px){
+    padding: 60px 0;
+  }
   ul{
     margin: 40px 0;
     @media screen and (max-width: 1000px){
@@ -9,6 +12,9 @@
   }
   .u-flex{
     justify-content: space-between;
+    @media screen and (max-width: 767px){
+      display: block;
+    }
   }
   .c-btn{
     a{
@@ -20,6 +26,14 @@
 .c-post{
   width: 30%;
   position: relative;
+  @media screen and (max-width: 767px){
+    width: 98%;
+  }
+  &:not(:last-child){
+    @media screen and (max-width: 767px){
+      margin-bottom: 30px;
+    }
+  }
   h4{
     font-size: 16px;
     @media screen and (max-width: 900px){
