--- a/common/scss/_l-footer.scss
+++ b/common/scss/_l-footer.scss
@@ -19,6 +19,9 @@
       width: 80%;
       margin: 40px auto 0;
     }
+    @media screen and (max-width: 550px){
+      width: 100%;
+    }
     &.u-flex{
       @media screen and (max-width: 767px){
         justify-content: space-between;
@@ -32,6 +35,12 @@
   a{
     padding: 0 24px;
     display: block;
+    @media screen and (max-width: 450px){
+      padding: 0 16px;
+    }
+    @media screen and (max-width: 350px){
+      padding: 0 8px;
+    }
   }
   .c-contents{
     padding: 32px 0 24px;
