--- a/scss/_newpost.scss
+++ b/scss/_newpost.scss
@@ -17,7 +17,7 @@
     @media screen and (max-width: 1000px){
       left: -30px;
     }
-    @media screen and (max-width: 640px){
+    @media screen and (max-width: 700px){
       left: -10px;
     }
     img{
@@ -25,7 +25,7 @@
       @media screen and (max-width: 1000px){
         width: 300px;
       }
-      @media screen and (max-width: 640px){
+      @media screen and (max-width: 700px){
         width: 250px;
       }
     }
@@ -36,7 +36,7 @@
     position: relative;
   }
   .u-flex{
-    @media screen and (max-width: 640px){
+    @media screen and (max-width: 700px){
       display: block;
     }
   }
@@ -51,7 +51,7 @@
     @media screen and (max-width: 1000px){
       margin: 100px 0 0 40px;
     }
-    @media screen and (max-width: 640px){
+    @media screen and (max-width: 700px){
       margin: 40px 0 0 0;
     }
   }
@@ -65,8 +65,13 @@
     @media screen and (max-width: 800px){
       width: 350px;
     }
-    @media screen and (max-width: 640px){
+    @media screen and (max-width: 700px){
       width: 100%;
+    }
+    img{
+      @media screen and (max-width: 700px){
+        width: 100%;
+      }
     }
   }
   &__textcontents{
