modify headermenu sp

--- a/common/css/style.css
+++ b/common/css/style.css
@@ -129,12 +129,65 @@ h3:before {
   justify-content: space-between;
 }
 
-.p-headercontents li {
+@media screen and (max-width: 767px) {
+  .p-headercontents.u-flex {
+    display: block;
+  }
+}
+
+@media screen and (max-width: 767px) {
+  .p-headermenu.u-flex {
+    display: block;
+  }
+}
+
+.p-headermenu li {
   padding: 0 24px;
 }
 
-.p-headercontents li a {
+@media screen and (max-width: 767px) {
+  .p-headermenu li {
+    padding: 0 0 20px 0;
+  }
+}
+
+.p-headermenu li a {
   display: block;
+}
+
+.p-spmenu {
+  cursor: pointer;
+}
+
+.c-spbtn {
+  position: relative;
+}
+
+.c-spbtn span {
+  width: 20px;
+  height: 2px;
+  background: #555;
+  position: absolute;
+  top: 50%;
+  left: 50%;
+}
+
+.c-spbtn span:nth-of-type(1) {
+  -webkit-transform: translate(0, -5px);
+  -ms-transform: translate(0, -5px);
+  transform: translate(0, -5px);
+}
+
+.c-spbtn span:nth-of-type(2) {
+  -webkit-transform: translate(0, 0);
+  -ms-transform: translate(0, 0);
+  transform: translate(0, 0);
+}
+
+.c-spbtn span:nth-of-type(3) {
+  -webkit-transform: translate(0, 5px);
+  -ms-transform: translate(0, 5px);
+  transform: translate(0, 5px);
 }
 
 .l-container {
