--- a/scss/_about.scss
+++ b/scss/_about.scss
@@ -3,4 +3,9 @@
   margin-top: -60px;
   padding: 140px 0 60px;
   background: #fbf9f8;
+  .u-flex{
+    @media screen and (max-width: 767px){
+      display: block;
+    }
+  }
 }
