--- a/common/scss/_l-header.scss
+++ b/common/scss/_l-header.scss
@@ -18,11 +18,55 @@
   }
   &.u-flex{
     justify-content: space-between;
+    @media screen and (max-width: 767px){
+      display: block;
+    }
+  }
+}
+
+.p-headermenu{
+  @media screen and (max-width: 767px){
+    // display: none;
+  }
+  &.u-flex{
+    @media screen and (max-width: 767px){
+      display: block;
+    }
   }
   li{
     padding: 0 24px;
+    @media screen and (max-width: 767px){
+      padding: 0 0 20px 0;
+    }
     a{
       display: block;
+    }
+  }
+}
+
+//spbtn
+
+.p-spmenu{
+  cursor: pointer;
+}
+
+.c-spbtn{
+  position: relative;
+  span{
+    width: 20px;
+    height: 2px;
+    background: #555;
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    &:nth-of-type(1){
+      transform: translate(0, -5px);
+    }
+    &:nth-of-type(2){
+      transform: translate(0, 0);
+    }
+    &:nth-of-type(3){
+      transform: translate(0, 5px);
     }
   }
 }
