--- a/common/css/style.css
+++ b/common/css/style.css
@@ -156,20 +156,32 @@ h3:before {
 }
 
 .p-spmenu {
-  cursor: pointer;
+  position: fixed;
+  top: 20px;
+  right: 20px;
+  z-index: 10;
 }
 
 .c-spbtn {
+  width: 50px;
+  height: 50px;
+  background: #fff;
+  border-radius: 50%;
   position: relative;
 }
 
 .c-spbtn span {
   width: 20px;
   height: 2px;
+  margin: auto;
   background: #555;
   position: absolute;
   top: 50%;
-  left: 50%;
+  left: 0;
+  right: 0;
+  -webkit-transition: all 0.5s;
+  -o-transition: all 0.5s;
+  transition: all 0.5s;
 }
 
 .c-spbtn span:nth-of-type(1) {
@@ -188,6 +200,32 @@ h3:before {
   -webkit-transform: translate(0, 5px);
   -ms-transform: translate(0, 5px);
   transform: translate(0, 5px);
+}
+
+.c-spbtn:active {
+  border: 1px solid #ef9c9c;
+}
+
+.c-spbtn:active span {
+  background: #ef9c9c;
+}
+
+.c-spbtn:active span:nth-of-type(1) {
+  -webkit-transform: translate(0, 0px) rotate(45deg);
+  -ms-transform: translate(0, 0px) rotate(45deg);
+  transform: translate(0, 0px) rotate(45deg);
+}
+
+.c-spbtn:active span:nth-of-type(2) {
+  -webkit-transform: translate(0px, 0px) scale(0, 1) rotate(0deg);
+  -ms-transform: translate(0px, 0px) scale(0, 1) rotate(0deg);
+  transform: translate(0px, 0px) scale(0, 1) rotate(0deg);
+}
+
+.c-spbtn:active span:nth-of-type(3) {
+  -webkit-transform: translate(0, 0px) rotate(-45deg);
+  -ms-transform: translate(0, 0px) rotate(-45deg);
+  transform: translate(0, 0px) rotate(-45deg);
 }
 
 .l-container {
