--- a/common/scss/_l-header.scss
+++ b/common/scss/_l-header.scss
@@ -47,18 +47,28 @@
 //spbtn
 
 .p-spmenu{
-  cursor: pointer;
+  position: fixed;
+  top:  20px;
+  right: 20px;
+  z-index: 10;
 }
 
 .c-spbtn{
+  width: 50px;
+  height: 50px;
+  background: #fff;
+  border-radius: 50%;
   position: relative;
   span{
     width: 20px;
     height: 2px;
+    margin: auto;
     background: #555;
     position: absolute;
     top: 50%;
-    left: 50%;
+    left: 0;
+    right: 0;
+    transition: all 0.5s;
     &:nth-of-type(1){
       transform: translate(0, -5px);
     }
@@ -67,6 +77,22 @@
     }
     &:nth-of-type(3){
       transform: translate(0, 5px);
+    }
+  }
+
+  &:active{
+    border: 1px solid #ef9c9c;
+    span{
+      background: #ef9c9c;
+      &:nth-of-type(1){
+        transform: translate(0, 0px) rotate(45deg);
+      }
+      &:nth-of-type(2){
+        transform: translate(0px, 0px) scale(0, 1) rotate(0deg);
+      }
+      &:nth-of-type(3){
+        transform: translate(0, 0px) rotate(-45deg);
+      }
     }
   }
 }
