--- a/common/css/style.css
+++ b/common/css/style.css
@@ -145,21 +145,43 @@ h3:before {
   padding: 0 24px;
 }
 
+.p-headermenu li a {
+  position: relative;
+  display: block;
+}
+
 @media screen and (max-width: 767px) {
-  .p-headermenu li {
-    padding: 0 0 20px 0;
+  .p-headermenu li a {
+    font-size: 16px;
+    padding: 20px 0 20px 30px;
   }
 }
 
-.p-headermenu li a {
-  display: block;
+@media screen and (max-width: 767px) {
+  .p-headermenu li a:before {
+    content: '';
+    width: 20px;
+    height: 1px;
+    margin: auto;
+    background: #555;
+    position: absolute;
+    top: 0;
+    bottom: 0;
+    left: 0;
+  }
+}
+
+.p-headermenu__subja {
+  font-size: 12px;
+  padding-left: 8px;
+  display: inline-block;
 }
 
 .p-spmenu {
   position: fixed;
   top: 20px;
   right: 20px;
-  z-index: 10;
+  z-index: 11;
 }
 
 .c-spbtn {
@@ -228,6 +250,21 @@ h3:before {
   transform: translate(0, 0px) rotate(-45deg);
 }
 
+@media screen and (max-width: 767px) {
+  .c-spheadermenu {
+    width: 100%;
+    height: 100%;
+    background: #fff;
+    position: fixed;
+    top: 0;
+    left: 0;
+    z-index: 10;
+    -webkit-transition: ease-in-out 0.5s;
+    -o-transition: ease-in-out 0.5s;
+    transition: ease-in-out 0.5s;
+  }
+}
+
 .l-container {
   max-width: 1200px;
   width: 92%;
@@ -248,6 +285,10 @@ h3:before {
 
 .u-center {
   text-align: center;
+}
+
+.u-displaynone {
+  display: none;
 }
 
 .u-flex {
