--- a/common/scss/_l-footer.scss
+++ b/common/scss/_l-footer.scss
@@ -1,6 +1,9 @@
 .l-footer{
   font-family: 'Open Sans', sans-serif;
   background: #fbf9f8;
+  .l-container{
+    max-width: 94%;
+  }
 }
 
 .p-footercontents{
