--- a/common/css/style.css
+++ b/common/css/style.css
@@ -251,16 +251,6 @@ h3:before {
 }
 
 @media screen and (max-width: 767px) {
-  .u-displaynone__sp {
-    display: none;
-  }
-}
-
-#menu .open {
-  display: block;
-}
-
-@media screen and (max-width: 767px) {
   .c-spheadermenu {
     width: 100%;
     height: 100%;
@@ -269,9 +259,12 @@ h3:before {
     top: 0;
     left: 0;
     z-index: 10;
-    -webkit-transition: ease-in-out 0.5s;
-    -o-transition: ease-in-out 0.5s;
-    transition: ease-in-out 0.5s;
+    -webkit-transition: all 0.5s;
+    -o-transition: all 0.5s;
+    transition: all 0.5s;
+    -webkit-transform: translate(0, 100%);
+    -ms-transform: translate(0, 100%);
+    transform: translate(0, 100%);
   }
 }
 
@@ -281,6 +274,14 @@ h3:before {
 
 .c-spheadermenu__menulogo img {
   width: 75px;
+}
+
+@media screen and (max-width: 767px) {
+  .c-spheadermenu.open {
+    -webkit-transform: matrix(1, 0, 0, 1, 0, 0);
+    -ms-transform: matrix(1, 0, 0, 1, 0, 0);
+    transform: matrix(1, 0, 0, 1, 0, 0);
+  }
 }
 
 .l-container {
@@ -297,6 +298,16 @@ h3:before {
 
 @media screen and (min-width: 768px) {
   .u-sp {
+    display: none;
+  }
+}
+
+.u-displaynone {
+  display: none;
+}
+
+@media screen and (max-width: 767px) {
+  .u-displaynone__sp {
     display: none;
   }
 }
