--- a/common/scss/_l-header.scss
+++ b/common/scss/_l-header.scss
@@ -116,20 +116,6 @@
 
 //spmenu
 
-.u-displaynone{
-  &__sp{
-    @media screen and (max-width: 767px){
-      display: none;
-    }
-  }
-}
-
-#menu{
-  .open{
-    display: block;
-  }
-}
-
 .c-spheadermenu{
   @media screen and (max-width: 767px){
     width: 100%;
@@ -139,12 +125,18 @@
     top: 0;
     left: 0;
     z-index: 10;
-    transition: ease-in-out 0.5s;
+    transition: all 0.5s;
+    transform: translate(0, 100%);
   }
   &__menulogo{
     margin: 34px 24px;
     img{
       width: 75px;
+    }
+  }
+  &.open{
+    @media screen and (max-width: 767px){
+      transform: matrix(1, 0, 0, 1, 0, 0);
     }
   }
 }
