--- a/common/scss/_l-main.scss
+++ b/common/scss/_l-main.scss
@@ -16,6 +16,15 @@
   }
 }
 
+.u-displaynone{
+  display: none;
+  &__sp{
+    @media screen and (max-width: 767px){
+      display: none;
+    }
+  }
+}
+
 .u-center{
   text-align: center;
 }
