--- a/common/scss/_l-header.scss
+++ b/common/scss/_l-header.scss
@@ -3,6 +3,9 @@
   font-family: 'Open Sans', sans-serif;
   width: 94%;
   margin: auto;
+  @media screen and (max-width: 767px){
+    width: 90%;
+  }
   h1{
     img{
       width: 75px;
@@ -66,7 +69,7 @@
 .p-spmenu{
   position: fixed;
   top:  20px;
-  right: 20px;
+  right: 10px;
   z-index: 11;
 }
 
@@ -125,8 +128,8 @@
     top: 0;
     left: 0;
     z-index: 10;
-    transition: all 0.5s;
-    transform: translate(0, 100%);
+    transition: ease-in-out 0.5s;
+    display: none;
   }
   &__menulogo{
     margin: 34px 24px;
@@ -136,7 +139,7 @@
   }
   &.open{
     @media screen and (max-width: 767px){
-      transform: matrix(1, 0, 0, 1, 0, 0);
+      display: block;
     }
   }
 }
