--- a/common/css/style.css
+++ b/common/css/style.css
@@ -129,6 +129,12 @@ h3:before {
   }
 }
 
+@media screen and (max-width: 900px) {
+  .p-headercontents {
+    padding: 24px 0 16px;
+  }
+}
+
 .p-headercontents.u-flex {
   -webkit-box-pack: justify;
   -ms-flex-pack: justify;
@@ -185,8 +191,8 @@ h3:before {
 
 .p-spmenu {
   position: fixed;
-  top: 20px;
-  right: 10px;
+  top: 10px;
+  right: 15px;
   z-index: 11;
 }
 
@@ -264,16 +270,16 @@ h3:before {
     position: fixed;
     top: 0;
     left: 0;
-    z-index: 10;
-    -webkit-transition: ease-in-out 0.5s;
-    -o-transition: ease-in-out 0.5s;
-    transition: ease-in-out 0.5s;
-    display: none;
+    z-index: 0;
+    -webkit-transition: ease-in-out 0.3s;
+    -o-transition: ease-in-out 0.3s;
+    transition: ease-in-out 0.3s;
+    opacity: 0;
   }
 }
 
 .c-spheadermenu__menulogo {
-  margin: 34px 24px;
+  margin: 24px 5%;
 }
 
 .c-spheadermenu__menulogo img {
@@ -282,7 +288,8 @@ h3:before {
 
 @media screen and (max-width: 767px) {
   .c-spheadermenu.open {
-    display: block;
+    opacity: 1;
+    z-index: 10;
   }
 }
 
