--- a/common/scss/_l-header.scss
+++ b/common/scss/_l-header.scss
@@ -19,6 +19,9 @@
   @media screen and (max-width: 900px){
     font-size: 14px;
   }
+  @media screen and (max-width: 900px){
+    padding: 24px 0 16px;
+  }
   &.u-flex{
     justify-content: space-between;
     @media screen and (max-width: 767px){
@@ -68,8 +71,8 @@
 
 .p-spmenu{
   position: fixed;
-  top:  20px;
-  right: 10px;
+  top:  10px;
+  right: 15px;
   z-index: 11;
 }
 
@@ -127,19 +130,20 @@
     position: fixed;
     top: 0;
     left: 0;
-    z-index: 10;
-    transition: ease-in-out 0.5s;
-    display: none;
+    z-index: 0;
+    transition: ease-in-out 0.3s;
+    opacity: 0;
   }
   &__menulogo{
-    margin: 34px 24px;
+    margin: 24px 5%;
     img{
       width: 75px;
     }
   }
   &.open{
     @media screen and (max-width: 767px){
-      display: block;
+      opacity: 1;
+      z-index: 10;
     }
   }
 }
