--- a/scss/_about.scss
+++ b/scss/_about.scss
@@ -3,6 +3,10 @@
   margin-top: -60px;
   padding: 140px 0 60px;
   background: #fbf9f8;
+  @media screen and (max-width: 800px){
+    margin-top: 0;
+    padding: 60px 0;
+  }
   .u-flex{
     @media screen and (max-width: 767px){
       display: block;
