--- a/css/style.css
+++ b/css/style.css
@@ -309,6 +309,12 @@
   }
 }
 
+@media screen and (max-width: 800px) {
+  .p-photo__main {
+    width: 93%;
+  }
+}
+
 .c-photocontents {
   padding: 130px 0;
   background: -webkit-gradient(linear, left top, right top, from(#f7edea), color-stop(60%, #f7edea), color-stop(60%, #fff), to(#fff));
@@ -348,6 +354,12 @@
 @media screen and (max-width: 1000px) {
   .c-photocontents__textbox {
     padding-left: 30px;
+  }
+}
+
+@media screen and (max-width: 400px) {
+  .c-photocontents__textbox {
+    padding-left: 10px;
   }
 }
 
